--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
   font-weight: normal;
   font-style: normal;
 }
+* {
+  box-sizing: border-box;
+}
 
 @font-face {
   font-family: 'PoppinsMedium';
